--- a/src/scss/skins.icon.scss
+++ b/src/scss/skins.icon.scss
@@ -1,9 +1,14 @@
-.s-icon-down {
-  content:url("../assets/icons/down-arrow.svg");
+.s-icon-down::after {
+  @include media-breakpoint-down(xs) {
+    display: inline-block;
+    content: url("../assets/icons/down-arrow.svg");
+    padding-left: 2px;
+    width: 18px;
+  }
 }
 
 .s-icon-cart-empty {
-  content:url("../assets/icons/empty-cart.png");
+  content: url("../assets/icons/empty-cart.png");
 }
 
 .s-icon-insta {
